# robinhoodie

./: .gitignore  Anchor.toml  DESIGN.md  PITCH.md  PRODUCT.md  README.md  SETUP.md  package.json  tsconfig.json
app/piedpiper-app/: App.tsx  app.json  package.json
app/piedpiper-app/android/: settings.gradle
app/piedpiper-app/android/app/: build.gradle
app/piedpiper-app/src/: polyfills.ts
app/piedpiper-app/src/components/account/: account-ui.tsx
app/piedpiper-app/src/components/cluster/: cluster-picker-feature.tsx  cluster-ui.tsx
app/piedpiper-app/src/components/primitives/: AmountChips.tsx  BetButtons.tsx  BiometricSurface.tsx  Display.tsx  Eyebrow.tsx  GhostButton.tsx  HashDisplay.tsx  HeroValueBlock.tsx  PrimaryButton.tsx  Screen.tsx  StatusSurface.tsx  TopAppBar.tsx  index.ts
app/piedpiper-app/src/components/sign-in/: sign-in-feature.tsx  sign-in-ui.tsx
app/piedpiper-app/src/idl/: prediction_market.json
app/piedpiper-app/src/navigators/: AppNavigator.tsx  HomeNavigator.tsx
app/piedpiper-app/src/screens/: AccountScreen.tsx  BlankScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx  index.ts
app/piedpiper-app/src/theme/: index.ts  tokens.ts
app/piedpiper-app/src/types/: prediction_market.ts
app/piedpiper-app/src/utils/: codec.ts  config.ts  pdas.ts  program.ts  sgt.ts  txs.ts  useAuthorization.tsx  useMobileWallet.tsx  widgetBridge.ts
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: lib.rs
scripts/: donate.ts  sas-issue.ts  sas-verify.ts  seed.ts  settle.ts
tests/: prediction_market.ts
(+13 files in other folders)
